--- a/practicas/practica7/pom.xml
+++ b/practicas/practica7/pom.xml
@@ -28,5 +28,10 @@
             <artifactId>jbehave-maven-plugin</artifactId>
             <version>3.5.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derby</artifactId>
+            <version>10.8.2.2</version>
+        </dependency>
     </dependencies>
 </project>
