--- a/practicas/practica8/pom.xml
+++ b/practicas/practica8/pom.xml
@@ -23,6 +23,11 @@
             <version>6.0</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derby</artifactId>
+            <version>10.8.2.2</version>
+        </dependency>        
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.10</version>
