--- a/practicas/practica8b/pom.xml
+++ b/practicas/practica8b/pom.xml
@@ -108,6 +108,19 @@
                     </execution>
                 </executions>
             </plugin>
+        
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.5.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>clean</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
