--- a/practicas/practica8b/pom.xml
+++ b/practicas/practica8b/pom.xml
@@ -13,7 +13,7 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <netbeans.hint.deploy.server>gfv3ee6</netbeans.hint.deploy.server>
+        <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
         <netbeans.hint.license>gpl30</netbeans.hint.license>
     </properties>
 
@@ -70,7 +70,12 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
-        
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.1</version>
+        </dependency>
+            
     </dependencies>
 
     <build>
