ya funcionan los mensajes, aunque no en el registro, no sé por qué

--- a/practicas/proyecto/project-ui/src/main/resources/org/magmax/master/proyecto/ui/ApplicationResource.properties
+++ b/practicas/proyecto/project-ui/src/main/resources/org/magmax/master/proyecto/ui/ApplicationResource.properties
@@ -1,2 +1,4 @@
 error.name.required=User name is required
 error.password.required=Password is required
+error.email.required=Email is required
+error.email.invalid=You must use a valid mail
