--- a/practicas/proyecto/project-admin/pom.xml
+++ b/practicas/proyecto/project-admin/pom.xml
@@ -39,6 +39,51 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <archive>
+                        <index>true</index>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>org.magmax.master.project.admin.Main</mainClass>
+                        </manifest>
+                        <manifestEntries>
+                            <SplashScreen-Image>images/splash.png</SplashScreen-Image>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin> 
+                <artifactId>maven-assembly-plugin</artifactId> 
+                <configuration> 
+                    <descriptorRefs> 
+                        <descriptorRef>jar-with-dependencies</descriptorRef> 
+                    </descriptorRefs> 
+                     <archive>
+                        <index>true</index>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>org.magmax.master.project.admin.Main</mainClass>
+                        </manifest>
+                        <manifestEntries>
+                            <SplashScreen-Image>images/splash.png</SplashScreen-Image>
+                        </manifestEntries>
+                    </archive>
+                </configuration> 
+                <executions> 
+                    <execution> 
+                        <id>make-assembly</id> 
+                        <phase>package</phase> 
+                        <goals> 
+                            <goal>assembly</goal> 
+                        </goals> 
+                    </execution> 
+                </executions> 
+            </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.0</version>
                 <configuration>
@@ -52,13 +97,6 @@
                                 <dependencyLocationsEnabled>true</dependencyLocationsEnabled>
                             </configuration>
                         </plugin>
-                        <!--
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-javadoc-plugin</artifactId>
-                            <version>2.8</version>
-                        </plugin>
-                        -->
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-surefire-report-plugin</artifactId>
