--- a/practicas/proyecto/project-common/pom.xml
+++ b/practicas/proyecto/project-common/pom.xml
@@ -55,5 +55,10 @@
             <artifactId>antlr</artifactId>
             <version>2.7.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derby</artifactId>
+            <version>10.8.2.2</version>
+        </dependency>
     </dependencies>
 </project>
